--- a/sections/cstm-header.liquid
+++ b/sections/cstm-header.liquid
@@ -56,6 +56,7 @@
     .list-menu--inline {
         display: inline-flex;
         flex-wrap: wrap;
+        justify-content: center;
     }
 
     summary.list-menu__item {
@@ -807,12 +808,12 @@ customElements.define('sticky-header', StickyHeader);
           "label": "Main heading"
         },
         {
-          "type": "richtext",
+          "type": "text",
           "id": "sub_heading",
           "label": "Sub heading"
         },
         {
-          "type": "richtext",
+          "type": "text",
           "id": "offer_text",
           "label": "Offer text"
         },
