--- a/assets/home-page-product.css
+++ b/assets/home-page-product.css
@@ -17,7 +17,7 @@
     flex: 1 1 220px;
 }
 
-.product-card img {
+.product-card a img {
     width: 100%;
     height: auto;
     margin-bottom: 10px;
@@ -76,14 +76,22 @@
 
 .thumbnail-wrapper {
     display: flex;
-    margin-top: 8px;
-    flex-wrap: wrap;
+    flex-wrap: nowrap;
+    overflow: hidden;
+    position: relative;
+    transition: all 0.3s ease;
+    width:100%;
 }
-
+.thumbnail-wrapper.show-all {
+    flex-wrap: wrap;
+    height: auto;
+    overflow: visible;
+}
 .thumbnail,
-.product-card .thumbnail {
-    width: calc(40px + (70 - 40) * ((100vw - 360px) / (1920 - 360)));
-    height: calc(40px + (70 - 40) * ((100vw - 360px) / (1920 - 360)));
+.product-card .thumbnail,
+.expand-thumbnails {
+    max-width: calc(40px + (70 - 40) * ((100vw - 360px) / (1920 - 360)));
+    max-height: calc(40px + (70 - 40) * ((100vw - 360px) / (1920 - 360)));
     min-width: calc(40px + (70 - 40) * ((100vw - 360px) / (1920 - 360)));
     min-height: calc(40px + (70 - 40) * ((100vw - 360px) / (1920 - 360)));
     object-fit: cover;
@@ -93,9 +101,18 @@
     transition: border 0.2s;
     align-items: center;
 }
-
+.expand-thumbnails {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 20px;
+}
+.thumbnail-wrapper.show-all .thumbnail {
+    display: flex !important;
+}
 .thumbnail-image-wrapper {
     padding-right: 9px;
+    padding-bottom: 9px;
 }
 
 .thumbnail:hover {
