--- a/sections/recommended-products.liquid
+++ b/sections/recommended-products.liquid
@@ -147,61 +147,6 @@
       });
     </script>
 {% endif %}
-
-
-{% style %}
-    .thumbnail-wrapper {
-    display: flex;
-    flex-wrap: nowrap;
-    overflow: hidden;
-    position: relative;
-    transition: all 0.3s ease;
-    width:100%;
-    }
-
-    .thumbnail-wrapper.show-all {
-    flex-wrap: wrap;
-    height: auto;
-    overflow: visible;
-    }
-
-    .thumbnail {
-    width: 50px;
-    height: 50px;
-    object-fit: cover;
-    flex-shrink: 0;
-    transition: opacity 0.2s ease;
-    }
-
-    .expand-thumbnails {
-    position:relative;
-    color: #000;
-    border: 1px solid #898989b3;;
-    cursor: pointer;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    font-size: 18px;
-    line-height: 1;
-    padding: 0;
-    z-index: 2;
-    height:100%;
-    border-radius: 50% !important;
-    }
-
-
-
-    .thumbnail-wrapper.show-all .thumbnail {
-    display: block !important;
-    }
-
-    .thumbnail-wrapper.show-all {
-    padding-bottom: 10px;
-    }
-
-{% endstyle %}
-
-
 <script defer>
 
   if (!customElements.get('recommended-product')) {
@@ -228,7 +173,7 @@
         requestAnimationFrame(() => {
           this.tabs.forEach(tab => {
             const thumbnailWrapper = tab.querySelector('.thumbnail-wrapper:not(.expand-thumbnails)');
-            const expandButton = document.createElement('button');
+            const expandButton = document.createElement('div');
             expandButton.className = 'expand-thumbnails thumbnail';
             expandButton.setAttribute('aria-label', 'Show all images');
             thumbnailWrapper.appendChild(expandButton);
