--- a/snippets/category-image.liquid
+++ b/snippets/category-image.liquid
@@ -9,8 +9,8 @@
                     <img
                             src="{{ image_url }}"
                             alt="{{ image_alt }}"
-                            width="300"
-                            height="200"
+                            width="145"
+                            height="75"
                             loading="lazy"
                             class="category-image__img"
                     >
@@ -22,32 +22,33 @@
 
 
 {% style %}
-    .category-images-container {
-    display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
-    gap: 20px;
-    margin-top: 15px;
+.mega-menu-subcategory-list .mega-menu__link.mega-menu__link--level-2 {
+         margin-bottom: 15px;
+         border-bottom: 2px solid #000;
+         padding: 0;
+         color: #212121;
+         font-size: 18px;
+         font-weight: 500;
+         width: fit-content;
+}
+.mega-menu-subcategory-list .mega-menu__link.mega-menu__link--level-2:hover {
+   text-decoration: none;
+   }
+    .mega-menu-subcategory-list .category-image {
+      display: none;
+      transition: opacity 0.3s ease;
+      width: 145px;
+      height: 75px;
+      margin-bottom: 15px;
     }
-
-    .category-image {
-    display: none; /* Hidden by default */
-    transition: opacity 0.3s ease;
-    }
-
-    .category-image.active {
+    .mega-menu-subcategory-list .category-image.active {
     display: block;
     }
-
-    .category-image{
-        width: 145px;
-        height: 75px;
-    }
-
-    .category-image__img {
+    .mega-menu-subcategory-list .category-image__img {
     width: 100%;
     height: 100%;
-    border-radius: 8px;
     object-fit: contain;
+    object-position: left;
     }
 
 
