--- a/snippets/cstm-header-drawer.liquid
+++ b/snippets/cstm-header-drawer.liquid
@@ -12,7 +12,9 @@
     }
     .menu-drawer__menu-submenu  .mega-menu__image {
     border-radius: 50%;
-    width:  50px;
+    min-width: 50px;
+    min-height: 50px;
+    width: 50px;
     height: 50px;
     }
     .menu-drawer__submenu   details ,
