--- a/snippets/header-mega-menu.liquid
+++ b/snippets/header-mega-menu.liquid
@@ -9,7 +9,9 @@
     .submenu-under{
     display:flex;
     }
-
+.mega-menu-bg {
+  background-color: #fff;
+}
 
 {% endstyle %}
 
@@ -41,6 +43,7 @@
                                     class="mega-menu__content color-{{ section.settings.menu_color_scheme }} gradient motion-reduce global-settings-popup"
                                     tabindex="-1"
                             >
+                            <div class="mega-menu-bg">
                                 <ul class="mega-menu__list page-width{%- if link.levels == 1 %} mega-menu__list--condensed{% endif -%}{%- if link != blank -%}{%- assign link_handle = link.title | handleize | downcase -%}{%- for block in section.blocks -%}{%- if block.type == 'promotion_image' and block.settings.target_link == link_handle %} promotional-banner-menu{%- elsif block.type == 'mini_banner' and block.settings.mini_banner_trigger == link_handle %} min-banner-menu{%- endif -%}{%- endfor -%}{%- endif -%}"
                                     role="list">
 
@@ -111,6 +114,7 @@
 
                                 </ul>
                             </div>
+                           </div>
                         </details>
                     </header-menu>
                 {%- else -%}
