--- a/sections/home-page-banner.liquid
+++ b/sections/home-page-banner.liquid
@@ -466,7 +466,9 @@
             data-current-slide="0"
             aria-label="{{ section.settings.slideshow_label | default: 'Featured content slideshow' }}"
     >
+        {% assign block_count = 0 %}
         {% for block in section.blocks %}
+            {% assign block_count = block_count |  plus: 1 %}
             {% assign visibility = block.settings.visibility %}
             <li class="banner-slide slider__slide" id="Banner-slide-{{ block.id }}" {{ block.shopify_attributes }}>
                 <div
@@ -635,14 +637,18 @@
         {% endfor %}
     </ul>
 
-    <div class="slider-buttons-wrapper">
-        <button type="button" class="slider-button slider-button--prev" name="previous" aria-label="Previous">
-            <span class="svg-wrapper">{{- 'left-arrow.svg' | inline_asset_content -}}</span>
-        </button>
-        <button type="button" class="slider-button slider-button--next" name="next" aria-label="Next">
-            <span class="svg-wrapper">{{- 'right-arrow.svg' | inline_asset_content -}}</span>
-        </button>
-    </div>
+
+    {% if block_count > 1 %}
+        <div class="slider-buttons-wrapper">
+            <button type="button" class="slider-button slider-button--prev" name="previous" aria-label="Previous">
+                <span class="svg-wrapper">{{- 'left-arrow.svg' | inline_asset_content -}}</span>
+            </button>
+            <button type="button" class="slider-button slider-button--next" name="next" aria-label="Next">
+                <span class="svg-wrapper">{{- 'right-arrow.svg' | inline_asset_content -}}</span>
+            </button>
+        </div>
+    {% endif %}
+
 </banner-slideshow>
 
 <script defer>
