--- a/assets/home-page-product.css
+++ b/assets/home-page-product.css
@@ -1,7 +1,7 @@
 .recommended-heading {
     font-size: calc(22px + (45 - 22) * ((100vw - 360px) / (1920 - 360)));
-    font-weight: 70;
-    height: 50px;
+    font-weight: 700;
+    min-height: 50px;
     margin: 0 0 20px;
 }
 
